manifests/daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik
  labels:
    app: traefik
    stack: lb
spec:
  template:
    metadata:
      labels:
        app: traefik
        stack: lb
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 60
      serviceAccountName: traefik-ingress-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: edge-node
                operator: In
                values:
                - "true"
      containers:
      - name: traefik
        image: traefik:1.7
        imagePullPolicy: IfNotPresent
        args:
        - "--consul.watch=false"
        - "--consul.prefix=traefik"
        - "--consul.endpoint=$CONSUL_SVC"
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        ports:
        - name: http
          hostPort: 80
          containerPort: 80
        - name: https
          hostPort: 443
          containerPort: 443
        - name: dashboard-ping
          hostPort: 8080
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
          limits:
            cpu: 500m
            memory: 100Mi
        volumeMounts:
        - name: logs
          mountPath: /var/log/traefik
        readinessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
      volumes:
      - name: logs
        hostPath:
          path: /data/traefik/logs
