manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
    stack: lb
spec:
  type: ClusterIP
  selector:
    app: traefik
    stack: lb
  ports:
  - name: traefik
    port: 8080
    targetPort: 8080
